@@ -158,15 +158,7 @@ The following place holders should be present in the string:
   :group 'grep)
 
 (defcustom grep-find-ignored-directories
-  '(".bzr"
-    ".git"
-    ".hg"
-    ".svn"
-    "CVS"
-    "RCS"
-    "_MTN"
-    "_darcs"
-    "{arch}")
+  vc-directory-exclusion-list
   "*List of names of sub-directories which `rgrep' shall not recurse into."
   :type '(repeat string)
   :group 'grep)
